DPDSLParser.py
# Generated from DPDSL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DPDSLParser ( Parser ):

    grammarFileName = "DPDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "'*'", "')'", "'['", "']'", 
                     "'.'", "'+'", "'-'", "'/'", "'>'", "'<'", "'='", "'>='", 
                     "'<='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SELECT", "FROM", "WHERE", "GROUP", "BY", 
                      "LIMIT", "AS", "OF", "JOIN", "ON", "INNER", "LEFT", 
                      "RIGHT", "FULL", "PRIVATE", "PUBLIC", "SUM", "COUNT", 
                      "MAX", "AVG", "MIN", "ID", "INT", "FLOAT", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "STRING" ]

    RULE_query = 0
    RULE_select_clause = 1
    RULE_select_item = 2
    RULE_expression = 3
    RULE_column_ref = 4
    RULE_from_clause = 5
    RULE_table_source = 6
    RULE_join_type = 7
    RULE_where_clause = 8
    RULE_group_by_clause = 9
    RULE_group_item = 10
    RULE_limit_clause = 11
    RULE_operator = 12
    RULE_budget = 13
    RULE_label = 14
    RULE_function_name = 15
    RULE_identifier = 16

    ruleNames =  [ "query", "select_clause", "select_item", "expression", 
                   "column_ref", "from_clause", "table_source", "join_type", 
                   "where_clause", "group_by_clause", "group_item", "limit_clause", 
                   "operator", "budget", "label", "function_name", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    SELECT=17
    FROM=18
    WHERE=19
    GROUP=20
    BY=21
    LIMIT=22
    AS=23
    OF=24
    JOIN=25
    ON=26
    INNER=27
    LEFT=28
    RIGHT=29
    FULL=30
    PRIVATE=31
    PUBLIC=32
    SUM=33
    COUNT=34
    MAX=35
    AVG=36
    MIN=37
    ID=38
    INT=39
    FLOAT=40
    WS=41
    LINE_COMMENT=42
    BLOCK_COMMENT=43
    STRING=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Select_clauseContext,0)


        def from_clause(self):
            return self.getTypedRuleContext(DPDSLParser.From_clauseContext,0)


        def EOF(self):
            return self.getToken(DPDSLParser.EOF, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Where_clauseContext,0)


        def group_by_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Group_by_clauseContext,0)


        def limit_clause(self):
            return self.getTypedRuleContext(DPDSLParser.Limit_clauseContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = DPDSLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.select_clause()
            self.state = 35
            self.from_clause()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 36
                self.where_clause()


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 39
                self.group_by_clause()


            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 42
                self.limit_clause()


            self.state = 45
            self.match(DPDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(DPDSLParser.SELECT, 0)

        def select_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.Select_itemContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.Select_itemContext,i)


        def getRuleIndex(self):
            return DPDSLParser.RULE_select_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_clause" ):
                listener.enterSelect_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_clause" ):
                listener.exitSelect_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_clause" ):
                return visitor.visitSelect_clause(self)
            else:
                return visitor.visitChildren(self)




    def select_clause(self):

        localctx = DPDSLParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(DPDSLParser.SELECT)
            self.state = 48
            self.select_item()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 49
                self.match(DPDSLParser.T__0)
                self.state = 50
                self.select_item()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.alias = None # IdentifierContext

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DPDSLParser.IdentifierContext,0)


        def AS(self):
            return self.getToken(DPDSLParser.AS, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_select_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_item" ):
                listener.enterSelect_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_item" ):
                listener.exitSelect_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_item" ):
                return visitor.visitSelect_item(self)
            else:
                return visitor.visitChildren(self)




    def select_item(self):

        localctx = DPDSLParser.Select_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_select_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.expression(0)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23 or _la==38:
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 57
                    self.match(DPDSLParser.AS)


                self.state = 60
                localctx.alias = self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DPDSLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AggregationContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_name(self):
            return self.getTypedRuleContext(DPDSLParser.Function_nameContext,0)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)

        def OF(self):
            return self.getToken(DPDSLParser.OF, 0)
        def budget(self):
            return self.getTypedRuleContext(DPDSLParser.BudgetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregation" ):
                listener.enterAggregation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregation" ):
                listener.exitAggregation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregation" ):
                return visitor.visitAggregation(self)
            else:
                return visitor.visitChildren(self)


    class CountStarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_name(self):
            return self.getTypedRuleContext(DPDSLParser.Function_nameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountStar" ):
                listener.enterCountStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountStar" ):
                listener.exitCountStar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCountStar" ):
                return visitor.visitCountStar(self)
            else:
                return visitor.visitChildren(self)


    class StringLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(DPDSLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class FloatLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(DPDSLParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class LiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(DPDSLParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)


    class ColumnReferenceContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def column_ref(self):
            return self.getTypedRuleContext(DPDSLParser.Column_refContext,0)

        def label(self):
            return self.getTypedRuleContext(DPDSLParser.LabelContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnReference" ):
                listener.enterColumnReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnReference" ):
                listener.exitColumnReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnReference" ):
                return visitor.visitColumnReference(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.ExpressionContext,i)

        def operator(self):
            return self.getTypedRuleContext(DPDSLParser.OperatorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DPDSLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = DPDSLParser.CountStarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 64
                self.function_name()
                self.state = 65
                self.match(DPDSLParser.T__1)
                self.state = 66
                self.match(DPDSLParser.T__2)
                self.state = 67
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 2:
                localctx = DPDSLParser.AggregationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.function_name()
                self.state = 70
                self.match(DPDSLParser.T__1)
                self.state = 71
                self.expression(0)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 72
                    self.match(DPDSLParser.OF)
                    self.state = 73
                    self.match(DPDSLParser.T__4)
                    self.state = 74
                    self.budget()
                    self.state = 75
                    self.match(DPDSLParser.T__5)


                self.state = 79
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 3:
                localctx = DPDSLParser.ColumnReferenceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31 or _la==32:
                    self.state = 81
                    self.label()


                self.state = 84
                self.column_ref()
                pass

            elif la_ == 4:
                localctx = DPDSLParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 85
                self.match(DPDSLParser.T__1)
                self.state = 86
                self.expression(0)
                self.state = 87
                self.match(DPDSLParser.T__3)
                pass

            elif la_ == 5:
                localctx = DPDSLParser.LiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 89
                self.match(DPDSLParser.INT)
                pass

            elif la_ == 6:
                localctx = DPDSLParser.FloatLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 90
                self.match(DPDSLParser.FLOAT)
                pass

            elif la_ == 7:
                localctx = DPDSLParser.StringLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 91
                self.match(DPDSLParser.STRING)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DPDSLParser.BinaryOpContext(self, DPDSLParser.ExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 94
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 95
                    self.operator()
                    self.state = 96
                    self.expression(6) 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Column_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.IdentifierContext,i)


        def getRuleIndex(self):
            return DPDSLParser.RULE_column_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_ref" ):
                listener.enterColumn_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_ref" ):
                listener.exitColumn_ref(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn_ref" ):
                return visitor.visitColumn_ref(self)
            else:
                return visitor.visitChildren(self)




    def column_ref(self):

        localctx = DPDSLParser.Column_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_column_ref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.identifier()
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 104
                self.match(DPDSLParser.T__6)
                self.state = 105
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(DPDSLParser.FROM, 0)

        def table_source(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.Table_sourceContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.Table_sourceContext,i)


        def getRuleIndex(self):
            return DPDSLParser.RULE_from_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_clause" ):
                listener.enterFrom_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_clause" ):
                listener.exitFrom_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_clause" ):
                return visitor.visitFrom_clause(self)
            else:
                return visitor.visitChildren(self)




    def from_clause(self):

        localctx = DPDSLParser.From_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_from_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(DPDSLParser.FROM)
            self.state = 109
            self.table_source()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 110
                self.match(DPDSLParser.T__0)
                self.state = 111
                self.table_source()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_sourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DPDSLParser.RULE_table_source

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleTableContext(Table_sourceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.Table_sourceContext
            super().__init__(parser)
            self.alias = None # IdentifierContext
            self.copyFrom(ctx)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.IdentifierContext,i)

        def AS(self):
            return self.getToken(DPDSLParser.AS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleTable" ):
                listener.enterSimpleTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleTable" ):
                listener.exitSimpleTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleTable" ):
                return visitor.visitSimpleTable(self)
            else:
                return visitor.visitChildren(self)


    class JoinTableContext(Table_sourceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DPDSLParser.Table_sourceContext
            super().__init__(parser)
            self.alias = None # IdentifierContext
            self.copyFrom(ctx)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DPDSLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(DPDSLParser.IdentifierContext,i)

        def JOIN(self):
            return self.getToken(DPDSLParser.JOIN, 0)
        def ON(self):
            return self.getToken(DPDSLParser.ON, 0)
        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)

        def join_type(self):
            return self.getTypedRuleContext(DPDSLParser.Join_typeContext,0)

        def AS(self):
            return self.getToken(DPDSLParser.AS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoinTable" ):
                listener.enterJoinTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoinTable" ):
                listener.exitJoinTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJoinTable" ):
                return visitor.visitJoinTable(self)
            else:
                return visitor.visitChildren(self)



    def table_source(self):

        localctx = DPDSLParser.Table_sourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_table_source)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                localctx = DPDSLParser.SimpleTableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.identifier()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23 or _la==38:
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==23:
                        self.state = 118
                        self.match(DPDSLParser.AS)


                    self.state = 121
                    localctx.alias = self.identifier()


                pass

            elif la_ == 2:
                localctx = DPDSLParser.JoinTableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.identifier()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2013265920) != 0):
                    self.state = 125
                    self.join_type()


                self.state = 128
                self.match(DPDSLParser.JOIN)
                self.state = 129
                self.identifier()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23 or _la==38:
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==23:
                        self.state = 130
                        self.match(DPDSLParser.AS)


                    self.state = 133
                    localctx.alias = self.identifier()


                self.state = 136
                self.match(DPDSLParser.ON)
                self.state = 137
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Join_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INNER(self):
            return self.getToken(DPDSLParser.INNER, 0)

        def LEFT(self):
            return self.getToken(DPDSLParser.LEFT, 0)

        def RIGHT(self):
            return self.getToken(DPDSLParser.RIGHT, 0)

        def FULL(self):
            return self.getToken(DPDSLParser.FULL, 0)

        def getRuleIndex(self):
            return DPDSLParser.RULE_join_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoin_type" ):
                listener.enterJoin_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoin_type" ):
                listener.exitJoin_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJoin_type" ):
                return visitor.visitJoin_type(self)
            else:
                return visitor.visitChildren(self)




    def join_type(self):

        localctx = DPDSLParser.Join_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_join_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2013265920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DPDSLParser.WHERE, 0)

        def expression(self):
            return self.getTypedRuleContext(DPDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DPDSLParser.RULE_where_clause
